# lib/db/src/schema/index.ts
@@ -1,1 +1,4 @@
 export * from "./communityPrayers";
+export * from "./prayerUsage";
+export * from "./userPremiumStatus";
+export * from "./auth";
